game site basic styling added

--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
         <div class="game_site_top_content">
 
             <div class="left_paragraph">
-                <p>At the shop, we have...
-                    Single, multiplayer and online games, 
-                    with an African touch, for all age groups.
+                <p>At the shop, we have... <br>
+                    Single, multiplayer and online games, <br> 
+                    with an African touch, for all age <br> groups.
                 </p>  
-                <p>Wi-Fi, snacks, music and many more complemeteries.</p>  
+                <p>Wi-Fi, snacks, music and many more <br> complemeteries.</p>  
             </div>
 
             <div class="right_carousel">
@@ -165,6 +165,7 @@
                     </div>
           
                 </div>
+
                 <div class="game_site_page_carousel_book_button">
                     <button class="carousel_book_btn">Book with Us</button>
                 </div>
@@ -180,7 +181,7 @@
             </div>
             <div class="game_site_middle_paragraphs">
                 <p>What happens when Africa meets technology?
-                    Come and find out!
+                    <br>Come and find out!
                 </p>
                 <p>Enjoy an African Gaming Experience</p>
             </div>
