contact us section basic styling added

--- a/index.html
+++ b/index.html
@@ -291,6 +291,7 @@
                     </form>
             
                 </div>
+
             </div>
 
             <div class="contact_page_right_content">
@@ -312,7 +313,7 @@
 
         </div>
 
-        <footer class="footer-btm">
+        <footer class="footer-bottom">
             &copy; Andito Gaming 2023
           </footer>
 
